<resources>
    <string name="app_name">GAY Games</string>

    <!-- Home Activity -->
    <string name="title_activity_home">Home</string>

    <string name="game1">Placeholder</string>
    <string name="game2">TicTacToe</string>
    <string name="game3">Runner</string>
    <string name="game4">Rock Paper Scissors</string>
    <string name="game5">Snake</string>

    <!-- Home Activity -->
    <string name="friendsTitle">Friends</string>

    <!-- Login Activity -->
    <string name="LoginButton">Login</string>
    <string name="CreateAccountButton">Create Account</string>
    <string name="NameText">Name</string>
    <string name="PasswordText">Password</string>


    <!-- TicTacToe -->
    <string name="tictactoeBlank"> </string>
    <string name="tictactoeToptxt"> Tic Tac Toe </string>
    <string name="tictactoeBtmTxt"> SinglePlayer </string>

    <string name="btmTxtWon">GAME DONE! %1$s won.</string>

    <string name="tictactoeMenuTxt">TicTacToe Menu</string>
    <string name="tttplaybutton">Play</string>
    <string name="tttnewmp">Create Game</string>
    <string name="tttjoinmp">Join Game By Code</string>
    <string name="tttcodeTxt">Enter Code</string>
    <string name="ttt1pTxt">Singleplayer</string>
    <string name="tttmpTxt">Multiplayer</string>


    <!-- Infinite Runner -->
    <string name="runnerIconDescription"> Runner Icon </string>
    <string name="initialScore">0</string>

    <string name="parallaxbg"> parallax background component</string>


    <!-- Leaderboard -->
    <string name="leaderboardTop"> Leaderboard </string>
    <string name="leaderboardSwitch" > Friends </string>

    <!-- RockPaperScissors-->
    <string name="rockButton1"> rockButton </string>
    <string name="paperButton1"> paperButton </string>
    <string name="scissorsButton1"> scissorsButton </string>
    <string name="rockButton2"> rockButton </string>
    <string name="paperButton2"> paperButton </string>
    <string name="scissorsButton2"> scissorsButton </string>
    <string name="textView1"> Player 1, your turn  </string>
    <string name="textView2"> Player 2 </string>
    <string name="loginImageLabel">loginImage</string>

    <!-- Popup -->
    <string name="hello_blank_fragment"> GAME OVER </string>
    <string name="popUpPlayAgain"> Play Again </string>
    <string name="popUpMainMenu"> Main Menu </string>
    <string name="popUpLeaderboard"> Leaderboard </string>


</resources>