<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.gamesui.RockPaperScissors.RPSActivity" >

    <RelativeLayout
        android:layout_weight=".5"
        android:background="#FF0000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/scissorsButton2"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="275dp"
            android:layout_marginBottom="167dp"
            android:contentDescription="@string/scissorsButton2"
            android:onClick="player2Move"
            android:rotation="180"
            android:saveEnabled="false"
            android:scaleType="fitXY"
            android:src="@drawable/scissorsicon"
            android:tag="Scissors" />

        <ImageButton
            android:id="@+id/rockButton2"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="167dp"
            android:contentDescription="@string/rockButton2"
            android:onClick="player2Move"
            android:rotation="180"
            android:saveEnabled="false"
            android:scaleType="fitCenter"
            android:src="@drawable/rockicon"
            android:tag="Rock" />

        <ImageButton
            android:id="@+id/paperButton2"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="147dp"
            android:layout_marginBottom="167dp"
            android:contentDescription="@string/paperButton2"
            android:onClick="player2Move"
            android:rotation="180"
            android:saveEnabled="false"
            android:scaleType="fitCenter"
            android:src="@drawable/papericon"
            android:tag="Paper" />

        <TextView
            android:id="@+id/player2TextView"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:rotation="180"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/textView2" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3C00C3"
        android:layout_weight=".5">


        <ImageButton
            android:id="@+id/rockButton1"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="275dp"
            android:layout_marginBottom="85dp"
            android:contentDescription="@string/rockButton1"
            android:onClick="player1Move"
            android:scaleType="fitCenter"
            android:src="@drawable/rockicon"
            android:tag="Rock"/>

        <ImageButton
            android:id="@+id/paperButton1"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="147dp"
            android:layout_marginBottom="85dp"
            android:contentDescription="@string/paperButton1"
            android:onClick="player1Move"
            android:scaleType="fitCenter"
            android:src="@drawable/papericon"
            android:tag="Paper"/>

        <ImageButton
            android:id="@+id/scissorsButton1"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="85dp"
            android:contentDescription="@string/scissorsButton1"
            android:onClick="player1Move"
            android:scaleType="fitXY"
            android:src="@drawable/scissorsicon"
            android:tag="Scissors"/>

        <TextView
            android:id="@+id/player1TextView"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="225dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/textView1" />
    </RelativeLayout>
</LinearLayout>
