<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homewp"
    tools:context=".ui.home.HomeActivity">

    <ImageButton
        android:id="@+id/placeholderBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/game1"
        android:scaleType="fitXY"
        android:src="@drawable/nour"
        android:text="@string/game1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageButton
        android:id="@+id/RPSBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/game3"
        android:scaleType="fitXY"
        android:src="@drawable/rps"
        android:text="@string/game4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholderBtn" />

    <ImageButton
        android:id="@+id/TTTBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/game2"
        android:scaleType="fitXY"
        android:src="@drawable/ttt"
        android:text="@string/game2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/runnerBtn"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/placeholderBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageButton
        android:id="@+id/runnerBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="12dp"
        android:background="#8F8A8A"
        android:contentDescription="@string/game3"
        android:scaleType="fitXY"
        android:src="@android:drawable/ic_menu_delete"
        android:text="@string/game3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageButton
        android:id="@+id/snakeBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/game5"
        android:scaleType="fitXY"
        android:src="@drawable/snake"
        android:text="@string/game5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runnerBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>