<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popUp"
    android:layout_width="350dp"
    android:layout_height="250dp"
    android:layout_marginTop="200dp"
    android:layout_marginStart="21dp"

    tools:context=".ui.gamesui.general.gamePopUpMenu"
    android:background="#06213C"
    >

    <TextView
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/hello_blank_fragment"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageButton
        android:id="@+id/playAgainButton"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="a"
        android:onClick="onClick"
        android:scaleType="fitCenter"
        android:src="@drawable/huh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#12B6D3"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="86dp"
        android:layout_height="26dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="112dp"
        android:textColor="@color/white"
        android:text="@string/popUpPlayAgain"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/mainMenuButton"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="a"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/homebutton"
        android:background="#D36C12"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="79dp"
        android:layout_height="29dp"
        android:layout_marginBottom="108dp"
        android:text="@string/popUpMainMenu"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/mainMenuButton"
        android:src="@drawable/leaderboardbutton"
        android:scaleType="fitCenter"
        android:background="#95D312"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="89dp"
        android:layout_height="27dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="108dp"
        android:text="@string/popUpLeaderboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>