<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.gamesui.tictactoe.TicTacToe1PActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TTLBContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:foreground="@drawable/tttbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/TTTb8"
            android:layout_width="95dp"
            android:layout_height="94dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="tttClicked"
            android:text="@string/tictactoeBlank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TTTb5" />

        <Button
            android:id="@+id/TTTb6"
            android:layout_width="95dp"
            android:layout_height="94dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="tttClicked"
            android:text="@string/tictactoeBlank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/TTTb5"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/TTTb5"
            android:layout_width="95dp"
            android:layout_height="94dp"
            android:onClick="tttClicked"
            android:text="@string/tictactoeBlank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/TTTb2"
            android:layout_width="95dp"
            android:layout_height="94dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:onClick="tttClicked"
            android:text="@string/tictactoeBlank"
            app:layout_constraintBottom_toTopOf="@+id/TTTb5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/TTTb4"
            android:layout_width="95dp"
            android:layout_height="94dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="tttClicked"
            android:text="@string/tictactoeBlank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/TTTb5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/TTTb9"
            android:layout_width="95dp"
            android:layout_height="94dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="tttClicked"
            android:text="@string/tictactoeBlank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/TTTb8"
            app:layout_constraintTop_toBottomOf="@+id/TTTb6" />

        <Button
            android:id="@+id/TTTb7"
            android:layout_width="95dp"
            android:layout_height="94dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="tttClicked"
            android:text="@string/tictactoeBlank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/TTTb8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TTTb4" />

        <Button
            android:id="@+id/TTTb3"
            android:layout_width="95dp"
            android:layout_height="94dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="100dp"
            android:onClick="tttClicked"
            android:text="@string/tictactoeBlank"
            app:layout_constraintBottom_toTopOf="@+id/TTTb6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/TTTb2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/TTTb1"
            android:layout_width="95dp"
            android:layout_height="94dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="100dp"
            android:onClick="tttClicked"
            android:text="@string/tictactoeBlank"
            app:layout_constraintBottom_toTopOf="@+id/TTTb4"
            app:layout_constraintEnd_toStartOf="@+id/TTTb2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/TTTtopTxt"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tictactoeToptxt"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toTopOf="@+id/TTLBContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TTTbtmTxt"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tictactoeBtmTxt"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TTLBContainer" />
</androidx.constraintlayout.widget.ConstraintLayout>